--- a/index.html
+++ b/index.html
@@ -1,169 +1,180 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MangaTx</title>
-    <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/css/estilos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/normalize.css" />
+    <link rel="stylesheet" href="assets/css/estilos.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <img src="assets/img/MANGATXCOM-LOGO (1).png" alt="">
+      <div class="logo">
+        <img src="assets/img/MANGATXCOM-LOGO (1).png" alt="" />
+      </div>
+      <div class="lista-principal">
+        <ul>
+          <li>
+            <a href="#">
+              <span class="casita"></span>
+              Home
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="carpeta"></span>
+              Manga list
+            </a>
+          </li>
+          <li>
+            <a href="#">Manhwa</a>
+          </li>
+          <li>
+            <a href="#">Manhua</a>
+          </li>
+          <li>
+            <a href="#">Novel</a>
+          </li>
+        </ul>
+      </div>
+      <div class="boton-busqueda">
+        <div class="boton">
+          <p>
+            <span class="lupa"></span>
+          </p>
         </div>
-        <div class="lista-principal">
-            <ul>
-                <li>
-                    <a href="#">
-                        <span class="casita"></span>
-                        Home
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="carpeta"></span>
-                        Manga list
-                    </a>
-                </li>
-                <li>
-                    <a href="#">Manhwa</a>
-                </li>
-                <li>
-                    <a href="#">Manhua</a>
-                </li>
-                <li>
-                    <a href="#">Novel</a>
-                </li>
-            </ul>
-        </div>
-        <div class="boton-busqueda">
-            <div class="boton">
-                <p>
-                    <span class="lupa"></span>
-                </p>
-            </div>
-        </div>
+      </div>
     </header>
     <nav>
-        <ul>
-            <li>
-                <a href="#">
-                    <span class="discord-ico"></span>
-                    Discord
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span class="engranaje"></span>
-                    Reader Settings
-                </a>
-            </li>
-            <li>
-                <a href="#">Romance</a>
-            </li>
-            <li>
-                <a href="#">ISEKAI</a>
-            </li>
-            <li>
-                <a href="#">
-                    Accion
-                    <span class="flecha"></span>
-                </a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="#">
+            <span class="discord-ico"></span>
+            Discord
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="engranaje"></span>
+            Reader Settings
+          </a>
+        </li>
+        <li>
+          <a href="#">Romance</a>
+        </li>
+        <li>
+          <a href="#">ISEKAI</a>
+        </li>
+        <li>
+          <a href="#">
+            Accion
+            <span class="flecha"></span>
+          </a>
+        </li>
+      </ul>
     </nav>
     <section>
-        <div class="titulo-seccion">
-            <p>
-                <span class="rayo-ico"></span>
-                Latest manga updates
-            </p>
-        </div>
-        <div class="articulos">
-            <article>
-                <div class="logo-art">
-                    <img src="assets/img/Heavenly-Martial-God-Manga-Online-175x238.jpeg" alt="">
-                </div>
-                <div class="contenido-art">
-                    <div class="titulo-manga">
-                        <h3>Heavenly martial god</h3>
-                    </div>
-                    <div class="cal-manga">
-                        <div class="cal-grafig">
-                            <p>
-                                <span class="estrella"></span>
-                                <span class="estrella"></span>
-                                <span class="estrella"></span>
-                                <span class="estrella"></span>
-                                <span class="estrella"></span>
-                            </p>
-                        </div>
-                        <div>
-                            <p>4.3</p>
-                        </div>
-                    </div>
-                    <div class="capitulos">
-                        <div class="capitulo-etiqueta">
-                            <a href="#">Chapter 41</a>
-                            <span class="nuevo-cap">new</span>
-                        </div>
-                        <div class="capitulo-fecha">
-                            <a href="#">Chapter 40</a>
-                            <span class="fecha-cap">February 11, 2022</span>
-                        </div>
-                    </div>
-                </div>
-            </article>
-        </div>
+      <div class="titulo-seccion">
+        <p>
+          <span class="rayo-ico"></span>
+          Latest manga updates
+        </p>
+      </div>
+      <div class="articulos">
+        <article>
+          <div class="logo-art">
+            <img
+              src="assets/img/Heavenly-Martial-God-Manga-Online-175x238.jpeg"
+              alt=""
+            />
+          </div>
+          <div class="contenido-art">
+            <div class="titulo-manga">
+              <h3>Heavenly martial god</h3>
+            </div>
+            <div class="cal-manga">
+              <div class="cal-grafig">
+                <p>
+                  <span class="estrella"></span>
+                  <span class="estrella"></span>
+                  <span class="estrella"></span>
+                  <span class="estrella"></span>
+                  <span class="estrella"></span>
+                </p>
+              </div>
+              <div class="cal-numero">
+                <p>4.3</p>
+              </div>
+            </div>
+            <div class="capitulos">
+              <div class="capitulo-etiqueta">
+                <a href="#">Chapter 41</a>
+                <span class="nuevo-cap">new</span>
+              </div>
+              <div class="capitulo-fecha">
+                <a href="#">Chapter 40</a>
+                <span class="fecha-cap">February 11, 2022</span>
+              </div>
+            </div>
+          </div>
+        </article>
+      </div>
     </section>
     <footer>
-        <div class="categorias">
-            <div class="titulo-cat">
-                <h5>Manga genres</h5>
-            </div>
-            <div class="lista-cat">
-                <ul>
-                    <li>
-                        <a href="#">Action</a>
-                    </li>
-                    <li>
-                        <a href="#">Adventure</a>
-                    </li>
-                    <li>
-                        <a href="#">Comedy</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="categorias">
+        <div class="titulo-cat">
+          <h5>Manga genres</h5>
         </div>
-        <div>
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Privacy policy</a>
-                </li>
-                <li>
-                    <a href="#">legal disclaimer</a>
-                </li>
-                <li>
-                    <a href="#">Dmca</a>
-                </li>
-                <li>
-                    <a href="#">About us</a>
-                </li>
-                <li>
-                    <a href="#">contact us</a>
-                </li>
-            </ul>
+        <div class="lista-cat">
+          <ul>
+            <li>
+              <a href="#">Action</a>
+            </li>
+            <li>
+              <a href="#">Adventure</a>
+            </li>
+            <li>
+              <a href="#">Comedy</a>
+            </li>
+          </ul>
         </div>
-        <div>
-            <p>
-                The use of the manga and other promotional materials are allowed under the fair use clause of the Copyright Law and copyrights and trademarks are held by their respective owners © 2020 mangatx.com
-            </p>
-        </div>
+      </div>
+      <div>
+        <ul>
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Privacy policy</a>
+          </li>
+          <li>
+            <a href="#">legal disclaimer</a>
+          </li>
+          <li>
+            <a href="#">Dmca</a>
+          </li>
+          <li>
+            <a href="#">About us</a>
+          </li>
+          <li>
+            <a href="#">contact us</a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <p>
+          The use of the manga and other promotional materials are allowed under
+          the fair use clause of the Copyright Law and copyrights and trademarks
+          are held by their respective owners © 2020 mangatx.com
+        </p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
