--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <title>MangaTx</title>
     <link rel="stylesheet" href="assets/css/normalize.css" />
     <link rel="stylesheet" href="assets/css/estilos.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header>
@@ -88,43 +82,234 @@
         </p>
       </div>
       <div class="articulos">
-        <article>
-          <div class="logo-art">
-            <img
-              src="assets/img/Heavenly-Martial-God-Manga-Online-175x238.jpeg"
-              alt=""
-            />
-          </div>
-          <div class="contenido-art">
-            <div class="titulo-manga">
-              <h3>Heavenly martial god</h3>
+        <div class="par-arts">
+          <article>
+            <div class="logo-art">
+              <img
+                src="assets/img/Heavenly-Martial-God-Manga-Online-175x238.jpeg"
+                alt=""
+              />
             </div>
-            <div class="cal-manga">
-              <div class="cal-grafig">
-                <p>
-                  <span class="estrella"></span>
-                  <span class="estrella"></span>
-                  <span class="estrella"></span>
-                  <span class="estrella"></span>
-                  <span class="estrella"></span>
-                </p>
+            <div class="contenido-art">
+              <div class="titulo-manga">
+                <h3>Heavenly martial god</h3>
               </div>
-              <div class="cal-numero">
-                <p>4.3</p>
+              <div class="cal-manga">
+                <div class="cal-grafig">
+                  <p>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                  </p>
+                </div>
+                <div class="cal-numero">
+                  <p>4.3</p>
+                </div>
+              </div>
+              <div class="capitulos">
+                <div class="capitulo-etiqueta">
+                  <a href="#">Chapter 41</a>
+                  <span class="nuevo-cap">new</span>
+                </div>
+                <div class="capitulo-fecha">
+                  <a href="#">Chapter 40</a>
+                  <span class="fecha-cap">February 11, 2022</span>
+                </div>
               </div>
             </div>
-            <div class="capitulos">
-              <div class="capitulo-etiqueta">
-                <a href="#">Chapter 41</a>
-                <span class="nuevo-cap">new</span>
+          </article>
+          <article>
+            <div class="logo-art">
+              <img
+                src="assets/img/Heavenly-Martial-God-Manga-Online-175x238.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="contenido-art">
+              <div class="titulo-manga">
+                <h3>Heavenly martial god</h3>
               </div>
-              <div class="capitulo-fecha">
-                <a href="#">Chapter 40</a>
-                <span class="fecha-cap">February 11, 2022</span>
+              <div class="cal-manga">
+                <div class="cal-grafig">
+                  <p>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                  </p>
+                </div>
+                <div class="cal-numero">
+                  <p>4.3</p>
+                </div>
+              </div>
+              <div class="capitulos">
+                <div class="capitulo-etiqueta">
+                  <a href="#">Chapter 41</a>
+                  <span class="nuevo-cap">new</span>
+                </div>
+                <div class="capitulo-fecha">
+                  <a href="#">Chapter 40</a>
+                  <span class="fecha-cap">February 11, 2022</span>
+                </div>
               </div>
             </div>
-          </div>
-        </article>
+          </article>
+        </div>
+        <div class="par-arts">
+          <article>
+            <div class="logo-art">
+              <img
+                src="assets/img/Heavenly-Martial-God-Manga-Online-175x238.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="contenido-art">
+              <div class="titulo-manga">
+                <h3>Heavenly martial god</h3>
+              </div>
+              <div class="cal-manga">
+                <div class="cal-grafig">
+                  <p>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                  </p>
+                </div>
+                <div class="cal-numero">
+                  <p>4.3</p>
+                </div>
+              </div>
+              <div class="capitulos">
+                <div class="capitulo-etiqueta">
+                  <a href="#">Chapter 41</a>
+                  <span class="nuevo-cap">new</span>
+                </div>
+                <div class="capitulo-fecha">
+                  <a href="#">Chapter 40</a>
+                  <span class="fecha-cap">February 11, 2022</span>
+                </div>
+              </div>
+            </div>
+          </article>
+          <article>
+            <div class="logo-art">
+              <img
+                src="assets/img/Heavenly-Martial-God-Manga-Online-175x238.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="contenido-art">
+              <div class="titulo-manga">
+                <h3>Heavenly martial god</h3>
+              </div>
+              <div class="cal-manga">
+                <div class="cal-grafig">
+                  <p>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                  </p>
+                </div>
+                <div class="cal-numero">
+                  <p>4.3</p>
+                </div>
+              </div>
+              <div class="capitulos">
+                <div class="capitulo-etiqueta">
+                  <a href="#">Chapter 41</a>
+                  <span class="nuevo-cap">new</span>
+                </div>
+                <div class="capitulo-fecha">
+                  <a href="#">Chapter 40</a>
+                  <span class="fecha-cap">February 11, 2022</span>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="par-arts">
+          <article>
+            <div class="logo-art">
+              <img
+                src="assets/img/Heavenly-Martial-God-Manga-Online-175x238.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="contenido-art">
+              <div class="titulo-manga">
+                <h3>Heavenly martial god</h3>
+              </div>
+              <div class="cal-manga">
+                <div class="cal-grafig">
+                  <p>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                  </p>
+                </div>
+                <div class="cal-numero">
+                  <p>4.3</p>
+                </div>
+              </div>
+              <div class="capitulos">
+                <div class="capitulo-etiqueta">
+                  <a href="#">Chapter 41</a>
+                  <span class="nuevo-cap">new</span>
+                </div>
+                <div class="capitulo-fecha">
+                  <a href="#">Chapter 40</a>
+                  <span class="fecha-cap">February 11, 2022</span>
+                </div>
+              </div>
+            </div>
+          </article>
+          <article>
+            <div class="logo-art">
+              <img
+                src="assets/img/Heavenly-Martial-God-Manga-Online-175x238.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="contenido-art">
+              <div class="titulo-manga">
+                <h3>Heavenly martial god</h3>
+              </div>
+              <div class="cal-manga">
+                <div class="cal-grafig">
+                  <p>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                    <span class="estrella"></span>
+                  </p>
+                </div>
+                <div class="cal-numero">
+                  <p>4.3</p>
+                </div>
+              </div>
+              <div class="capitulos">
+                <div class="capitulo-etiqueta">
+                  <a href="#">Chapter 41</a>
+                  <span class="nuevo-cap">new</span>
+                </div>
+                <div class="capitulo-fecha">
+                  <a href="#">Chapter 40</a>
+                  <span class="fecha-cap">February 11, 2022</span>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
       </div>
     </section>
     <footer>
@@ -143,10 +328,59 @@
             <li>
               <a href="#">Comedy</a>
             </li>
+            <li>
+              <a href="#">Action</a>
+            </li>
+            <li>
+              <a href="#">Adventure</a>
+            </li>
+            <li>
+              <a href="#">Comedy</a>
+            </li><li>
+              <a href="#">Action</a>
+            </li>
+            <li>
+              <a href="#">Adventure</a>
+            </li>
+            <li>
+              <a href="#">Comedy</a>
+            </li><li>
+              <a href="#">Action</a>
+            </li>
+            <li>
+              <a href="#">Adventure</a>
+            </li>
+            <li>
+              <a href="#">Comedy</a>
+            </li><li>
+              <a href="#">Action</a>
+            </li>
+            <li>
+              <a href="#">Adventure</a>
+            </li>
+            <li>
+              <a href="#">Comedy</a>
+            </li><li>
+              <a href="#">Action</a>
+            </li>
+            <li>
+              <a href="#">Adventure</a>
+            </li>
+            <li>
+              <a href="#">Comedy</a>
+            </li><li>
+              <a href="#">Action</a>
+            </li>
+            <li>
+              <a href="#">Adventure</a>
+            </li>
+            <li>
+              <a href="#">Comedy</a>
+            </li>
           </ul>
         </div>
       </div>
-      <div>
+      <div class="lista-inline">
         <ul>
           <li>
             <a href="#">Home</a>
@@ -168,7 +402,7 @@
           </li>
         </ul>
       </div>
-      <div>
+      <div class="disc">
         <p>
           The use of the manga and other promotional materials are allowed under
           the fair use clause of the Copyright Law and copyrights and trademarks
