Finished side menu for MangaTX

--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
     <title>MangaTx</title>
     <link rel="stylesheet" href="assets/css/normalize.css" />
     <link rel="stylesheet" href="assets/css/estilos.css" />
+    <link rel="stylesheet" href="assets/css/wrapper.css">
   </head>
   <body>
+    <div class="wrapper">
+      <input type="checkbox" id="bton" hidden>
+      <label for="bton" class="menu-btn"></label>
+      <nav class="sidebar">
+        <div class="title">Menu</div>
+        <ul class="list-item">
+            <li><a href="#"></a>Option 1</li>
+            <li><a href="#"></a>Option 2</li>
+            <li><a href="#"></a>Option 3</li>
+            <li><a href="#"></a>Option 4</li>
+            <li><a href="#"></a>Option 5</li>
+        </ul>
+      </nav>
+    </div>
     <header>
       <div class="logo">
         <img src="assets/img/MANGATXCOM-LOGO (1).png" alt="" />
